--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^2.6.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "swagger-ui-express": "^4.6.0",
     "uniqid": "^5.4.0"
   }
 }
